# semver

./: CHANGELOG.md  pyproject.toml
.github/workflows/: release.yml
